@@ -165,8 +165,8 @@ public class Button extends Table implements Disableable {
 		this.isDisabled = isDisabled;
 	}
 
-	/** If false, {@link #setChecked(boolean)} and {@link #toggle()} will not fire {@link ChangeEvent}, event will be fired only
-	 * when user clicked the button */
+	/** If false, {@link #setChecked(boolean)} and {@link #toggle()} will not fire {@link ChangeEvent}. The event will only be
+	 * fired only when the user clicks the button */
 	public void setProgrammaticChangeEvents (boolean programmaticChangeEvents) {
 		this.programmaticChangeEvents = programmaticChangeEvents;
 	}
